Task/sonar fixes (#59)
* first sonar fixes

Signed-off-by: Ronny Polley <ronnypolley@googlemail.com>

* first sonar fixes

Signed-off-by: Ronny Polley <ronnypolley@googlemail.com>

* do a complete checkout for sonarqube

Signed-off-by: Ronny Polley <ronnypolley@googlemail.com>

* clean up pom.xml

Signed-off-by: Ronny Polley <ronnypolley@googlemail.com>

---------

Signed-off-by: Ronny Polley <ronnypolley@googlemail.com>